<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mobi.tet_a_tet.atda.tet_a_tet.allerts_dialogs.WhotIsTetAtetActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/TableRowTitle"
            android:focusableInTouchMode="true"
            android:gravity="top|center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/oderingSystem"
                android:id="@+id/textViewTitle"
                android:gravity="top|center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/TableRowMessage">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/presentationTetAtet"
                android:id="@+id/textViewMessage" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tableRowStartAsDrv"
            android:focusableInTouchMode="true"
            android:gravity="center">

            <Button
                style="@style/taxoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startAsDriver"
                android:id="@+id/buttonStartAsDrv" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/TableRowButttonDiller">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonDWantTetAtet"
                android:id="@+id/buttonDiller"
                style="@style/taxoButton" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/TableRowButttonClose"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closeWindow"
                android:id="@+id/buttonClose"
                android:gravity="center"
                style="@style/taxoButton" />

        </TableRow>

    </TableLayout>

</ScrollView>
