<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mobi.tet_a_tet.atda.tet_a_tet.allerts_dialogs.IwantTetAtteActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/TableRowTitle"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tetInyouCityTitle"
                android:id="@+id/titleIwantTW"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/TableRowText"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tetDillerText"
                android:id="@+id/tetDillerTV"
                android:singleLine="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/TableRowStartAsDriv"
            android:focusableInTouchMode="true"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startAsDriver"
                android:id="@+id/buttonStartAsDrv"
                style="@style/taxoButton" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/TableRowContactInfo">

            <Button
                style="@style/taxoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contactInfo"
                android:id="@+id/buttonContactInfo"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tableRow"
            android:gravity="center">

            <Button
                style="@style/taxoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closeWindow"
                android:id="@+id/buttonClose"
                android:gravity="center" />
        </TableRow>

    </TableLayout>

</ScrollView>
