<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="138dp"
        android:layout_marginEnd="138dp"
        android:layout_marginTop="89dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startWorkWith"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                style="@style/taxoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withoutTetATet"
                android:id="@+id/btnStartWithoutTetATet"
                android:layout_centerHorizontal="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                style="@style/taxoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withTetATet"
                android:id="@+id/btnStartWithTetATet"
                android:layout_below="@+id/btnStartWithoutTetATet"
                android:layout_centerHorizontal="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                style="@style/taxoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withTetATetAndOther"
                android:id="@+id/btnStartWithTetATetAndOther"
                android:layout_below="@+id/btnStartWithoutTetATet"
                android:layout_alignLeft="@+id/btnStartWithoutTetATet"
                android:layout_alignStart="@+id/btnStartWithoutTetATet" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                style="@style/taxoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exitButonText"
                android:id="@+id/btnExit"
                android:layout_below="@+id/btnStartWithoutTetATet"
                android:layout_alignLeft="@+id/btnStartWithoutTetATet"
                android:layout_alignStart="@+id/btnStartWithoutTetATet" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                style="@style/taxoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutTetAtet"
                android:id="@+id/buttonAboutTet"
                android:layout_below="@+id/btnStartWithoutTetATet"
                android:layout_centerHorizontal="true"
                android:gravity="center" />
        </TableRow>
    </TableLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="49dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="45dp"></TableRow>

</RelativeLayout>